3877 fast reboot does not work with extended partition Reviewed by: Saso Kiselkov <skiselkov.ml@gmail.com> Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Dan McDonald <danmcd@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>